--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
+body{
+    background-color: rgb(188, 197, 197);
+    margin: 0;
+}
 #m{
     position: absolute;
-    height: 130%;
+    height: 100vh;
     width: 20%;
     right: 80%;
     background-color: rgb(241, 241, 241);
     display: none;
     z-index: 30;
+    position: fixed;
 }
 .x{
     position: absolute;
     top: 1px;
-    left: 335px;
+    left: 80%;
 }
 button{
     margin: 10px;
@@ -22,9 +27,6 @@ button{
     border: none;
     width: 40;
     height: 20;
-}
-body{
-    background-color: rgb(188, 197, 197);
 }
 a{
     color: black;
@@ -47,7 +49,7 @@ a{
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     position: absolute;
-    left: 550px;
+    left: 410px;
 }
 .products{
     background-color: rgb(255, 255, 255);
@@ -70,6 +72,8 @@ a{
         text-align: center;
       margin: 0;
       padding-top: 0px;
+      font-size: 20px;
+      font-style:inherit;
 }
 .p1{
     color: brown;
@@ -90,4 +94,49 @@ img{
     width: 19px;
     top: 20px;
     left: 230px;
+}
+.p10{
+    color: black;
+    font-size: 22px;
+}
+.products-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:30px;
+}
+.sharesp{
+    text-align: center;
+    font-size: 30px;
+}
+.sharesdiv{
+    width: 1550px;
+    height: 70px;
+    background-color: white;
+    line-height: 70px;
+ margin-bottom: 30px;
+    
+}
+.sharesblock{
+    width:200px;
+    height:300px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+}
+.shares-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:30px;
+}
+.sharesimg{
+    width: 130px;
+    height: 150px;
+    object-fit: contain;
+    padding: 15px;
+    display: block;
+    margin: 0 auto;
+}
+.pshares{
+    color: rgb(150, 0, 0);
+    font-size: 30px;
+    font-weight: bolder;
 }
