--- a/style.css
+++ b/style.css
@@ -19,14 +19,13 @@ body{
 }
 button{
     margin: 10px;
-    padding: 10px;
+    padding: 20px;
     cursor: pointer;
     background-color: rgb(188, 197, 197);
-    border-radius: 10px;
+    border-radius: 20px;
     outline-style:none;
     border: none;
-    width: 40;
-    height: 20;
+    
 }
 a{
     color: black;
@@ -34,22 +33,23 @@ a{
 }
 #but{
     margin: 10px;
-    padding: 10px;
+    padding: 20px;
     cursor: pointer;
     background-color: rgb(255, 255, 255);
-    border-radius: 10px;
+    border-radius: 20px;
     outline-style:none;
     border: none;
-    width: 40;
-    height: 20;
+ 
 }
 .center{
-    width: 900px;
+    width: 800px;
     height: 500px;
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     position: absolute;
     left: 410px;
+    box-shadow:0px 8px 24px rgb(49, 48, 48);
+    padding: 20px;
 }
 .products{
     background-color: rgb(255, 255, 255);
@@ -97,7 +97,7 @@ img{
 }
 .p10{
     color: black;
-    font-size: 22px;
+    font-size: 19px;
 }
 .products-container{
     display: flex;
@@ -109,11 +109,12 @@ img{
     font-size: 30px;
 }
 .sharesdiv{
-    width: 1550px;
     height: 70px;
     background-color: white;
     line-height: 70px;
  margin-bottom: 30px;
+ box-shadow:0px 8px 24px rgb(117, 115, 115);
+
     
 }
 .sharesblock{
@@ -139,4 +140,7 @@ img{
     color: rgb(150, 0, 0);
     font-size: 30px;
     font-weight: bolder;
+}
+h1{
+    text-align: center;
 }
